RESTful api for image saving and downloading crated